--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next": "14.2.15",
     "next-i18next": "^15.3.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
