--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-slick": "^0.30.2",
+    "sass": "^1.80.6",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
