--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   "dependencies": {
     "next": "14.2.15",
     "next-i18next": "^15.3.1",
+    "next-intl": "^3.25.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.1",
     "react-slick": "^0.30.2",
     "sass": "^1.80.6",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@types/node": "22.9.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.15",
     "eslint-config-prettier": "^9.1.0",
