--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "next": "14.2.15",
+    "i18next": "^23.16.5",
+    "next": "^15.0.3",
     "next-i18next": "^15.3.1",
     "next-intl": "^3.25.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.1",
     "react-slick": "^0.30.2",
-    "sass": "^1.80.6",
-    "slick-carousel": "^1.8.1"
+    "sass": "^1.80.7",
+    "sass-loader": "^16.0.3",
+    "slick-carousel": "^1.8.1",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
